Updates maintenance.md
Auto commit by GitBook Editor